Basic interface completed

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ button.css-1wckoud.edgvbvh9 {
 }
 
 div.css-183lzff.eyqtai90 {
-    text-align: left;
+    text-align: center;
 }
 
 //*.reportview-container {
